tests/negative/test_decl_glob_bad_id.orb
i32 & = 55;

fnc main() {
}